--- a/renkotrading.xmr.normalized.USDT.ipynb
+++ b/renkotrading.xmr.normalized.USDT.ipynb
@@ -400,7 +400,7 @@
     "    holding_value.append(init_holding*next_price)\n",
     "        \n",
     "end_eth = max(eth, xmr*next_price)\n",
-    "print(\"ETH final:\\t {}\".format(round(end_eth,2)))\n",
+    "print(\"USDT final:\\t {}\".format(round(end_eth,2)))\n",
     "print(\"Gain respect baseline:\\t {}%\".format(round((end_eth/end_holding)*100)))"
    ]
   },
